# Fetchmon

./: .gitignore  Cargo.toml  README.md  index.js  messageConfig.json  package-lock.json  package.json
commands/Utilities/: fetch.js  serverinfo.js  sleep.js
config/: language.json
src/: discord_generic.rs  main.rs  read_language.rs
src/commands/: fetch.rs  mod.rs  serverinfo.rs  sleep.rs
